/*
 * Copyright 2019, Allied Telesis Labs New Zealand, Ltd
 */

package cmsg_sld;

import "cmsg.proto";

message address_info
{
    optional uint32 ip_addr = 1;
}

message listener_info
{
    optional string service = 1;
    optional cmsg_transport_info transport_info = 2;
    optional uint32 id = 3;
    optional uint32 pid = 4;
}

service configuration
{
    rpc address_set (address_info) returns (dummy);
    rpc add_host (cmsg_uint32) returns (dummy);
    rpc delete_host (address_info) returns (dummy);
    rpc listen (listener_info) returns (dummy);
    rpc unlisten (listener_info) returns (dummy);
    rpc add_server (cmsg_service_info) returns (dummy);
    rpc remove_server (cmsg_service_info) returns (dummy);
}
